@@ -1,0 +1,28 @@
+; Common pjproject options
+;
+
+;========================LOG_MAPPINGS SECTION OPTIONS===============================
+;[log_mappings]
+;  SYNOPSIS: Provides pjproject to Asterisk log level mappings.
+;  NOTES: The name of this section in the pjproject.conf configuration file must
+;         remain log_mappings or the configuration will not be applied.
+;         The defaults mentioned below only apply if this file or the 'log_mappings'
+;         object can'tbe found.  If the object is found, there are no defaults. If
+;         you don't specify an entry, nothing will be logged for that level.
+;
+;asterisk_error =    ; A comma separated list of pjproject log levels to map to
+                     ; Asterisk errors.
+                     ; (default: "0,1")
+;asterisk_warning =  ; A comma separated list of pjproject log levels to map to
+                     ; Asterisk warnings.
+                     ; (default: "2")
+;asterisk_notice =   ; A comma separated list of pjproject log levels to map to
+                     ; Asterisk notices.
+                     ; (default: "")
+;asterisk_verbose =  ; A comma separated list of pjproject log levels to map to
+                     ; Asterisk verbose.
+                     ; (default: "")
+;asterisk_debug =    ; A comma separated list of pjproject log levels to map to
+                     ; Asterisk debug
+                     ; (default: "3,4,5")
+;type=               ; Must be of type log_mappings (default: "")
